syntax = "proto3";

package mdw.leibniz;

option go_package = "github.com/msto63/mDW/api/gen/leibniz";

import "common.proto";

// Leibniz Service - Agentic AI
// Pipeline processing is delegated to Platon service
service LeibnizService {
  // Agent Management
  rpc CreateAgent(CreateAgentRequest) returns (AgentInfo);
  rpc UpdateAgent(UpdateAgentRequest) returns (AgentInfo);
  rpc DeleteAgent(DeleteAgentRequest) returns (mdw.common.Empty);
  rpc GetAgent(GetAgentRequest) returns (AgentInfo);
  rpc ListAgents(mdw.common.Empty) returns (AgentListResponse);

  // Execution
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
  rpc StreamExecute(ExecuteRequest) returns (stream AgentChunk);
  rpc ContinueExecution(ContinueRequest) returns (ExecuteResponse);
  rpc CancelExecution(CancelRequest) returns (mdw.common.Empty);
  rpc GetExecution(GetExecutionRequest) returns (ExecutionInfo);

  // Tools
  rpc ListTools(mdw.common.Empty) returns (ToolListResponse);
  rpc RegisterTool(RegisterToolRequest) returns (ToolInfo);
  rpc UnregisterTool(UnregisterToolRequest) returns (mdw.common.Empty);

  // Health
  rpc HealthCheck(mdw.common.HealthCheckRequest) returns (mdw.common.HealthCheckResponse);
}

// Agent Management
message CreateAgentRequest {
  string name = 1;
  string description = 2;
  string system_prompt = 3;
  repeated string tools = 4;
  AgentConfig config = 5;
}

message UpdateAgentRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  string system_prompt = 4;
  repeated string tools = 5;
  AgentConfig config = 6;
}

message DeleteAgentRequest {
  string id = 1;
}

message GetAgentRequest {
  string id = 1;
}

message AgentInfo {
  string id = 1;
  string name = 2;
  string description = 3;
  string system_prompt = 4;
  repeated string tools = 5;
  AgentConfig config = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message AgentConfig {
  string model = 1;
  float temperature = 2;
  int32 max_iterations = 3;   // default: 10
  int32 timeout_seconds = 4;  // default: 60
  bool use_knowledge_base = 5;
  string knowledge_collection = 6;
  bool streaming_enabled = 7;
  bool enable_platon_processing = 8;  // Enable pre/post processing via Platon
  string platon_pipeline_id = 9;      // Pipeline ID to use in Platon
}

message AgentListResponse {
  repeated AgentInfo agents = 1;
  int32 total = 2;
}

// Execution
message ExecuteRequest {
  string agent_id = 1;
  string message = 2;
  string conversation_id = 3;
  map<string, string> variables = 4;
  bool auto_approve_tools = 5;
}

message ExecuteResponse {
  string execution_id = 1;
  string response = 2;
  repeated AgentAction actions = 3;
  ExecutionStatus status = 4;
  int32 iterations = 5;
  int64 duration_ms = 6;
  int32 total_tokens = 7;
  string conversation_id = 8;
}

enum ExecutionStatus {
  EXECUTION_STATUS_UNKNOWN = 0;
  EXECUTION_STATUS_RUNNING = 1;
  EXECUTION_STATUS_COMPLETED = 2;
  EXECUTION_STATUS_AWAITING_CONFIRMATION = 3;
  EXECUTION_STATUS_ERROR = 4;
  EXECUTION_STATUS_CANCELLED = 5;
}

message AgentAction {
  string tool = 1;
  string input = 2;
  string output = 3;
  bool success = 4;
  int64 duration_ms = 5;
}

message AgentChunk {
  ChunkType type = 1;
  string content = 2;
  AgentAction action = 3;
  int32 iteration = 4;
}

enum ChunkType {
  CHUNK_TYPE_UNKNOWN = 0;
  CHUNK_TYPE_THINKING = 1;
  CHUNK_TYPE_TOOL_CALL = 2;
  CHUNK_TYPE_TOOL_RESULT = 3;
  CHUNK_TYPE_RESPONSE = 4;
  CHUNK_TYPE_FINAL = 5;
}

message ContinueRequest {
  string execution_id = 1;
  bool approve_tool = 2;
  string tool_input_override = 3;
}

message CancelRequest {
  string execution_id = 1;
}

message GetExecutionRequest {
  string execution_id = 1;
}

message ExecutionInfo {
  string id = 1;
  string agent_id = 2;
  string conversation_id = 3;
  ExecutionStatus status = 4;
  repeated AgentAction actions = 5;
  string final_response = 6;
  int32 iterations = 7;
  int64 duration_ms = 8;
  int64 started_at = 9;
  int64 completed_at = 10;
}

// Tools
message ToolListResponse {
  repeated ToolInfo tools = 1;
}

message ToolInfo {
  string name = 1;
  string description = 2;
  string parameter_schema = 3;  // JSON Schema
  bool enabled = 4;
  bool requires_confirmation = 5;
  ToolSource source = 6;
}

enum ToolSource {
  TOOL_SOURCE_BUILTIN = 0;
  TOOL_SOURCE_MCP = 1;
  TOOL_SOURCE_CUSTOM = 2;
}

message RegisterToolRequest {
  string name = 1;
  string description = 2;
  string parameter_schema = 3;
  bool requires_confirmation = 4;
}

message UnregisterToolRequest {
  string name = 1;
}
